css/styles.css
@font-face {
  font-family: "Ubuntu";
  font-style: normal;
  font-weight: 400;
  src: local("Ubuntu"), url(fonts/Ubuntu-R.ttf) format("ttf");
}

.centered {
  text-align: center;
}

.center {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

.masteryOverview {
  text-align: center;
  align-self: center;
  align-content: center;
  flex-wrap: wrap;
}

.masteryButton {
  border: none;
  background-color: transparent;
  cursor: pointer;

  max-width: 10%;
  max-height: 10%;
  min-width: min-content;
  min-height: min-content;
}

.submitButton {
  border: none;
  background-color: transparent;
  cursor: pointer;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
  display: block;

  max-width: 100px;
  max-height: 10%;
  min-width: 60px;
  min-height: 60px;
}

.masteryPanel {
  max-width: 100%;
  min-width: 700px;
  min-height: 263.25px;
}

.masteryImage {
  filter: grayscale();
  max-width: 100%;
  max-height: 100%;
  min-width: 90px;
  min-height: 90px;
}

.disabled {
  display: none;
  text-align: center;
  max-width: inherit;
  float: left;
  position: relative;
}

.panels {
  width: 65%;
  max-height: 100%;
}

.masteryTable {
  width: 100%;
}

.infos {
  vertical-align: top;
}

.plusButton {
  bottom: 2.5%;
  left: 2.7%;
  position: absolute;
  width: 8%;
  height: 12%;
  min-width: 37px;
  min-height: 18px;
  background-color: transparent;
  border: none;
  cursor: pointer;
  line-height: 8px;
}

.allPlusButton {
  bottom: 6%;
  left: 10%;
  position: absolute;
  width: 4%;
  height: 6%;
  min-width: 40px;
  background-color: transparent;
  border: none;
  cursor: pointer;
  line-height: 8px;
  color: white;
}

.skillButton {
  position: absolute;
  background-color: transparent;
  border: none;
  cursor: pointer;
  width: 7%;
  height: 11%;
  min-width: 30px;
  min-height: 11px;
  max-width: 99px;
  max-height: 42px;
  line-height: max(8px, 0.8vw);
}

.buttonText {
  font-size: max(10px, 1vw);
  color: white;
}

.skillButtonImage {
  width: 80%;
  filter: grayscale();
}

.plusButtonImage {
  width: 100%;
}

.allPlusButtonImage {
  filter: brightness(0.5);
  width: 100%;
}

.masteryImagePanel {
  top: 6%;
  right: 3.35%;
  position: absolute;
  width: 18.7%;
  height: 32%;
}

.masteryTier {
  color: white;
  font-size: max(14px, 1vw);
  text-align: center;
  width: 2%;
}

#masteryTier1 {
  position: absolute;
  bottom: 25.1%;
  left: 3%;
}

#masteryTier2 {
  position: absolute;
  bottom: 36.4%;
  left: 3%;
}

#masteryTier3 {
  position: absolute;
  bottom: 47.8%;
  left: 3%;
}

#masteryTier4 {
  position: absolute;
  bottom: 59%;
  left: 3%;
}

#masteryTier5 {
  position: absolute;
  bottom: 70.8%;
  left: 3%;
}

#masteryTier6 {
  position: absolute;
  bottom: 82.1%;
  left: 3%;
}

#masteryTier7 {
  position: absolute;
  bottom: 93.6%;
  left: 3%;
}

#pop
{
	position: absolute;
	border: 1px solid #CCCC00;
	background-color: #000000;
	padding: 5px;
	filter: alpha(opacity=90); /* IE's opacity*/
	opacity: 0.90;
	z-index: 200;
	font-size: max(14px, 0.75vw);
}

.title {
  font-weight: bold;
  color: white;
}

.desc {

  color: white;
}

.nextLevel{

  color: white;
}

.skillAttribute{
  
  color: white;
}

.bar
{
  background-image: url("../MasteryPage/images/masteries/panel/bar.jpg");
  background-size: 100%;
  position: absolute;
	bottom: 15.5%;
	left: 5%;
	width: 3.2%;
  height: 0%;
}

